CloneCredentials - fixed spacing issue

--- a/client/signup/steps/clone-credentials/style.scss
+++ b/client/signup/steps/clone-credentials/style.scss
@@ -2,7 +2,3 @@
 	max-width: 720px;
 	margin: 0 auto;
 }
-
-.clone-credentials__form .form-fieldset:last-child {
-	margin-bottom: 0;
-}
